--- a/apps/templates/includes/charts.html
+++ b/apps/templates/includes/charts.html
@@ -1,3 +1,4 @@
+<!-- First chart -->
 <div class="row">
   <div class="col-12 col-lg-8 col-xl-8">
     <div class="card">
@@ -5,25 +6,15 @@
         Site Traffic
         <div class="card-action">
           <div class="dropdown">
-            <a
-              href="javascript:void();"
-              class="dropdown-toggle dropdown-toggle-nocaret"
-              data-toggle="dropdown"
-            >
+            <a href="javascript:void();" class="dropdown-toggle dropdown-toggle-nocaret" data-toggle="dropdown">
               <i class="icon-options"></i>
             </a>
             <div class="dropdown-menu dropdown-menu-right">
               <a class="dropdown-item" href="javascript:void();">Action</a>
-              <a class="dropdown-item" href="javascript:void();"
-                >Another action</a
-              >
-              <a class="dropdown-item" href="javascript:void();"
-                >Something else here</a
-              >
+              <a class="dropdown-item" href="javascript:void();">Another action</a>
+              <a class="dropdown-item" href="javascript:void();">Something else here</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="javascript:void();"
-                >Separated link</a
-              >
+              <a class="dropdown-item" href="javascript:void();">Separated link</a>
             </div>
           </div>
         </div>
@@ -46,33 +37,31 @@
         <div class="col-12 col-lg-4">
           <div class="p-3">
             <h5 class="mb-0">45.87M</h5>
-            <small class="mb-0"
-              >Overall Visitor
-              <span> <i class="fa fa-arrow-up"></i> 2.43%</span></small
-            >
+            <small class="mb-0">Overall Visitor
+              <span> <i class="fa fa-arrow-up"></i> 2.43%</span></small>
           </div>
         </div>
         <div class="col-12 col-lg-4">
           <div class="p-3">
             <h5 class="mb-0">15:48</h5>
-            <small class="mb-0"
-              >Visitor Duration
-              <span> <i class="fa fa-arrow-up"></i> 12.65%</span></small
-            >
+            <small class="mb-0">Visitor Duration
+              <span> <i class="fa fa-arrow-up"></i> 12.65%</span></small>
           </div>
         </div>
         <div class="col-12 col-lg-4">
           <div class="p-3">
             <h5 class="mb-0">245.65</h5>
-            <small class="mb-0"
-              >Pages/Visit
-              <span> <i class="fa fa-arrow-up"></i> 5.62%</span></small
-            >
+            <small class="mb-0">Pages/Visit
+              <span> <i class="fa fa-arrow-up"></i> 5.62%</span></small>
           </div>
         </div>
       </div>
     </div>
   </div>
+
+  <!-- First chart -->
+
+  <!-- Second chart -->
 
   <div class="col-12 col-lg-4 col-xl-4">
     <div class="card">
@@ -80,25 +69,15 @@
         Weekly sales
         <div class="card-action">
           <div class="dropdown">
-            <a
-              href="javascript:void();"
-              class="dropdown-toggle dropdown-toggle-nocaret"
-              data-toggle="dropdown"
-            >
+            <a href="javascript:void();" class="dropdown-toggle dropdown-toggle-nocaret" data-toggle="dropdown">
               <i class="icon-options"></i>
             </a>
             <div class="dropdown-menu dropdown-menu-right">
               <a class="dropdown-item" href="javascript:void();">Action</a>
-              <a class="dropdown-item" href="javascript:void();"
-                >Another action</a
-              >
-              <a class="dropdown-item" href="javascript:void();"
-                >Something else here</a
-              >
+              <a class="dropdown-item" href="javascript:void();">Another action</a>
+              <a class="dropdown-item" href="javascript:void();">Something else here</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="javascript:void();"
-                >Separated link</a
-              >
+              <a class="dropdown-item" href="javascript:void();">Separated link</a>
             </div>
           </div>
         </div>
@@ -137,4 +116,4 @@
     </div>
   </div>
 </div>
-<!--End Row-->
+  <!-- Second chart -->
