--- a/apps/templates/includes/sidebar.html
+++ b/apps/templates/includes/sidebar.html
@@ -8,7 +8,7 @@
         class="logo-icon"
         alt="logo icon"
       />
-      <h5 class="logo-text">Dashtreme Admin</h5>
+      <h5 class="logo-text">Phone Admin</h5>
     </a>
   </div>
   <ul class="sidebar-menu do-nicescrol">
@@ -21,13 +21,14 @@
 
     <li>
       <a href="#">
-        <i class="zmdi zmdi-invert-colors"></i> <span>UI Icons</span>
+        <i class="zmdi zmdi-invert-colors"></i> <span>Users</span>
       </a>
     </li>
 
     <li>
       <a href="#">
-        <i class="zmdi zmdi-format-list-bulleted"></i> <span>Forms</span>
+        <i class="zmdi zmdi-format-list-bulleted"></i> <span>Sales</span>
+        <small class="badge float-right badge-light">Hot</small>
       </a>
     </li>
 
@@ -43,7 +44,7 @@
     </li>
 
     <li>
-      <a href="#"> <i class="zmdi zmdi-face"></i> <span>Profile</span> </a>
+      <a href="#"> <i class="zmdi zmdi-face"></i> <span>Create user</span> </a>
     </li>
 
     <li>
