--- a/apps/templates/layouts/base.html
+++ b/apps/templates/layouts/base.html
@@ -77,6 +77,7 @@
     <!-- Chart js -->
 
     <script src="{% static 'plugins/Chart.js/Chart.min.js' %}"></script>
+    <script src="{% static 'basic_chart/chart.js' %}"></script>
 
     <!-- Index js -->
     <script src="{% static 'js/index.js' %}"></script>
