add functionalitites of chart js

--- a/apps/templates/includes/charts.html
+++ b/apps/templates/includes/charts.html
@@ -1,3 +1,16 @@
+<!-- Styles -->
+<style>
+#chartdiv {
+  width: 100%;
+  height: 300px;
+}
+</style>
+
+<!-- Resources -->
+<script src="https://cdn.amcharts.com/lib/5/index.js"></script>
+<script src="https://cdn.amcharts.com/lib/5/xy.js"></script>
+<script src="https://cdn.amcharts.com/lib/5/themes/Animated.js"></script>
+
 <!-- First chart -->
 <div class="row">
   <div class="col-12 col-lg-8 col-xl-8">
@@ -29,34 +42,34 @@
           </li>
         </ul>
         <div class="chart-container-1">
-          <canvas id="chart1"></canvas>
+          <div id="chartdiv"></div>
         </div>
       </div>
 
       <div class="row m-0 row-group text-center border-top border-light-3">
-        <div class="col-12 col-lg-4">
-          <div class="p-3">
-            <h5 class="mb-0">45.87M</h5>
-            <small class="mb-0">Overall Visitor
-              <span> <i class="fa fa-arrow-up"></i> 2.43%</span></small>
+          <div class="col-12 col-lg-4">
+            <div class="p-3">
+              <h5 class="mb-0">45.87M</h5>
+              <small class="mb-0">Overall Visitor
+                <span> <i class="fa fa-arrow-up"></i> 2.43%</span></small>
+            </div>
           </div>
-        </div>
-        <div class="col-12 col-lg-4">
-          <div class="p-3">
-            <h5 class="mb-0">15:48</h5>
-            <small class="mb-0">Visitor Duration
-              <span> <i class="fa fa-arrow-up"></i> 12.65%</span></small>
+          <div class="col-12 col-lg-4">
+            <div class="p-3">
+              <h5 class="mb-0">15:48</h5>
+              <small class="mb-0">Visitor Duration
+                <span> <i class="fa fa-arrow-up"></i> 12.65%</span></small>
+            </div>
           </div>
-        </div>
-        <div class="col-12 col-lg-4">
-          <div class="p-3">
-            <h5 class="mb-0">245.65</h5>
-            <small class="mb-0">Pages/Visit
-              <span> <i class="fa fa-arrow-up"></i> 5.62%</span></small>
+          <div class="col-12 col-lg-4">
+            <div class="p-3">
+              <h5 class="mb-0">245.65</h5>
+              <small class="mb-0">Pages/Visit
+                <span> <i class="fa fa-arrow-up"></i> 5.62%</span></small>
+            </div>
           </div>
         </div>
       </div>
-    </div>
   </div>
 
   <!-- First chart -->
